--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "multer": "^1.4.4",
+    "mysql2": "^2.3.3",
     "next": "12.1.5",
+    "next-connect": "^0.12.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "sequelize": "^6.19.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
