--- a/package.json
+++ b/package.json
@@ -9,21 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.8.1",
+    "@mui/lab": "^5.0.0-alpha.78",
+    "@mui/material": "^5.6.2",
     "axios": "^0.26.1",
+    "mdi-material-ui": "^7.2.0",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "next": "12.1.5",
     "next-connect": "^0.12.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "nprogress": "^0.2.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "sequelize": "^6.19.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@emotion/react": "^11.9.0",
     "@types/multer": "^1.4.7",
     "@types/node": "17.0.24",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
+    "@types/nprogress": "^0.2.0",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.3"
